# prooftrees

./: .gitignore  .ocamlformat  README.md  dune-project  flake.nix  result
.github/workflows/: ci.yml
lib/: dune  hello.ml
lib/base/: dune  pyramids.ml  trees.ml  util.ml
lib/logic/: dune  logic.ml  logic_exp.ml  proplogic.ml
test/: dune  run.t
test/base/trees/: dune  tree_sum.ml
test/logic/: assign.expected  assign.ml  dune  free_variables.expected  free_variables.ml  match_with.expected  match_with.ml  print_tree.expected  print_tree.ml  treeset.ml
