; For more information on writing and running tests, see the Dune documentation:
;
; - https://dune.readthedocs.io/en/stable/tests.html
; - https://dune.readthedocs.io/en/stable/dune-files.html#tests-stanza

(tests
 (names print_tree assign match_with)
 (package prooftrees)
 (libraries base logic))
